--- a/style.css
+++ b/style.css
@@ -392,6 +392,38 @@ body {
     filter: blur(0.9px);
     background-position: 10px;
 }
+.return-banner{
+    background-image: url("img/banner/b16.jpg");
+    height: 100%;
+    filter: blur(0.9px);
+    background-position: 10px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.privacy-banner{
+    background-image: url("img/banner/b10.jpg");
+    height: 100%;
+    filter: blur(0.9px);
+    background-position: 10px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.about-banner{
+    background-image: url("img/banner/b4.jpg");
+    height: 100%;
+    filter: blur(0.9px);
+    background-position: 10px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.blog-banner{
+    background-image: url("img/banner/b19.jpg");
+    height: 100%;
+    filter: blur(0.9px);
+    background-position: 10px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .men-text, .cart-text{
     position:absolute;
     top: 0;
@@ -408,7 +440,13 @@ body {
 .men-text p{
     color: wheat;
 }
-
+.area{
+    width: 100%;
+    height: 150vh;
+    background-color: #e7faea;
+    padding: 50px;
+    font-weight: bold;
+}
 
 
 /* cart */
