--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ body {
 }
 .footer .col span{
     font-weight: bold;
-    color: beige;
+    color: #f5f5dc;
     font-size: 16px;
 }
 .footer .col p{
@@ -342,7 +342,7 @@ body {
     text-align: center;
 }
 .footer .about-us p{
-    color: wheat;
+    color: #f5deb3;
 }
 .footer .about-us .about-opt{
     display: flex;
@@ -447,7 +447,22 @@ body {
     padding: 50px;
     font-weight: bold;
 }
-
+.pagination{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.pagination a{
+    text-decoration: none;
+    background-color: #088178;
+    padding: 15px 20px;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+.pagination a i{
+    font-size: 16px;
+    font-weight: 600;
+}
 
 /* cart */
 #mycart{
@@ -598,4 +613,60 @@ input::-webkit-outer-spin-button {
     border: 2px solid black;
     text-align: center;
     padding: 20px;
+}
+
+
+
+
+/* product  */
+#prodetails{
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+}
+#prodetails .single-pro-image{
+    width: 40%;
+}
+.small-img-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.small-img-col{
+    flex-basis: 170px;
+    cursor: pointer;
+}
+#prodetails .single-pro-details{
+    width: 50%;
+    padding: 30px;
+}
+#prodetails .single-pro-details h4{
+    padding: 40px 0 20px 0;
+    font-size: 32px;
+    color: black;
+}
+#prodetails .single-pro-details h2{
+    font-size: 26px;
+}
+#prodetails .single-pro-details select{
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+#prodetails .single-pro-details input{
+    width: 50px;
+    height: 47px;
+    padding-left: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+#prodetails .single-pro-details button:hover{
+    background: #088178;
+    color: #fff;
+}
+#prodetails .single-pro-details input:focus{
+    outline: n;
+}
+#prodetails .single-pro-details span{
+    line-height: 25px;
 }
